fixed improper wrapping in Monaco hovers

--- a/Source/SmallBasic.Editor/Components/Toolbox/MonacoEditor.scss
+++ b/Source/SmallBasic.Editor/Components/Toolbox/MonacoEditor.scss
@@ -9,6 +9,11 @@
     position: absolute;
 
     editor {
+        
+        .monaco-editor-hover .monaco-tokenized-source {
+            word-break: normal;
+        }
+        
         .wavy-line {
             display: inline-block;
             position: relative;
